midpoint/release/1.9/install.adoc
---
release-version: '1.9'
---
= Installing MidPoint 1.9 "Cronus" From Binary Distribution
:page-layout: release-install-legacy
:release-version: 1.9
:page-nav-title: Installation Instructions
:page-wiki-name: Installing midPoint from Binary Release - 1.9
:page-wiki-id: 2654555
:page-wiki-metadata-create-user: lazyman
:page-wiki-metadata-create-date: 2011-08-26T10:18:33.495+02:00
:page-wiki-metadata-modify-user: vix
:page-wiki-metadata-modify-date: 2012-01-26T15:29:12.881+01:00
:page-liquid:

{% for v in site.data.midpoint-versions %}{% if v.version == page.release-version %}{% assign this = v %}{% endif %}{% endfor %}

== Pre-requisites


=== Java SE Development Kit 6

The development environment requires JDK 6. Recommended is JDK 6  update 11 or above.
Update 4 contains the JAX-WS 2.1 but there are some  issues, so we suggest something after update 11 or the latest  which you  can download at link:http://java.sun.com/javase/downloads/widget/jdk6.jsp[http://java.sun.com/javase/downloads/widget/jdk6.jsp]

`JAVA_HOME` environment variable should point to the JDK 6 installation path.


=== Java Cryptography Extension (JCE) Unlimited Strength Jurisdiction Policy Files 6

The development environment and midPoint in runtime also requires JCE for cryptographic operations.
You can download it at link:http://www.oracle.com/technetwork/java/javase/downloads/index.html[http://www.oracle.com/technetwork/java/javase/downloads/index.html]. After downloading zip file follow installation instructions written in README.txt


=== Apache Tomcat

midPoint needs an application server.
Currently, Apache Tomcat 6.0.x is supported.
More application servers will be supported in later releases.

Apache Tomcat can be downloaded from link:http://tomcat.apache.org/download-60.cgi[http://tomcat.apache.org/download-60.cgi]. The Apache Tomcat installation directory is further referenced as <tomcat>.

== Prepare midPoint software

++++
{% include release-install-download-v1.html this=this %}
++++

=== Initialize Database

Initialize repository is not required.


=== Deploy midPoint

To deploy midPoint WAR file, use the following steps:

. Stop Tomcat if it's already running.

. Copy `idm.war` to `<tomcat>/webapps directory`.

. Start Tomcat.
It should pick up and deploy the "idm" application.


== Test midPoint administration GUI

Log in to the midPoint administration console using the following URL:

link:http://localhost:8080/idm/[http://localhost:8080/idm/]

[%autowidth,cols="h,1"]
|===
|  Username  |  administrator

|  Password
|  secret


|===

A home page of the midPoint console should be displayed.
This is a  pretty dynamic web application using AJAX for better user interaction.
The look&feel is quite minimalistic now, we are working on an  improvement just now.

If there is a problem, please check Tomcat logs in `<tomcat>/log/catalina.out` and `<tomcat>/log/idm.log`.

For a quick introduction to use of midPoint please follow the instructions on xref:/midpoint/get-started/quick-start/[First Steps] page.


== See Also

* xref:/midpoint/get-started/quick-start/[First Steps]

* xref:/midpoint/release/[midPoint Releases]
